@@ -1,3 +1,11 @@
+2011-09-15 Pierrick Caillon <pierrick@in-cite.net>
+	* Bug: Corrdinate convertion is not accurate. There is a nearly fixed noticable translation.
+
+2011-09-02 Pierrick Caillon <pierrick@in-cite.net>
+	* Charset fix.
+	* EntryPointDefinition convertion fix.
+	* Removed echo'ed debug in CoordinateConverter.
+
 2011-08-31 Pierrick Caillon <pierrick@in-cite.net>
 	* Integrated the coordinate conversion calls into Coord node.
 
